src/test/ui/simd-intrinsic/simd-intrinsic-generic-reduction.stderr
error[E0511]: invalid monomorphization of `simd_reduce_add_ordered` intrinsic: accumulator of simd_reduce_add_ordered is not 0.0
  --> $DIR/simd-intrinsic-generic-reduction.rs:46:9
   |
LL |         simd_reduce_add_ordered(z, 2_f32);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_mul_ordered` intrinsic: accumulator of simd_reduce_mul_ordered is not 1.0
  --> $DIR/simd-intrinsic-generic-reduction.rs:48:9
   |
LL |         simd_reduce_mul_ordered(z, 3_f32);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_and` intrinsic: expected return type `u32` (element of input `u32x4`), found `f32`
  --> $DIR/simd-intrinsic-generic-reduction.rs:51:22
   |
LL |         let _: f32 = simd_reduce_and(x);
   |                      ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_or` intrinsic: expected return type `u32` (element of input `u32x4`), found `f32`
  --> $DIR/simd-intrinsic-generic-reduction.rs:53:22
   |
LL |         let _: f32 = simd_reduce_or(x);
   |                      ^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_xor` intrinsic: expected return type `u32` (element of input `u32x4`), found `f32`
  --> $DIR/simd-intrinsic-generic-reduction.rs:55:22
   |
LL |         let _: f32 = simd_reduce_xor(x);
   |                      ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_and` intrinsic: unsupported simd_reduce_and from `f32x4` with element `f32` to `f32`
  --> $DIR/simd-intrinsic-generic-reduction.rs:58:22
   |
LL |         let _: f32 = simd_reduce_and(z);
   |                      ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_or` intrinsic: unsupported simd_reduce_or from `f32x4` with element `f32` to `f32`
  --> $DIR/simd-intrinsic-generic-reduction.rs:60:22
   |
LL |         let _: f32 = simd_reduce_or(z);
   |                      ^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_xor` intrinsic: unsupported simd_reduce_xor from `f32x4` with element `f32` to `f32`
  --> $DIR/simd-intrinsic-generic-reduction.rs:62:22
   |
LL |         let _: f32 = simd_reduce_xor(z);
   |                      ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_all` intrinsic: unsupported simd_reduce_all from `f32x4` with element `f32` to `bool`
  --> $DIR/simd-intrinsic-generic-reduction.rs:65:23
   |
LL |         let _: bool = simd_reduce_all(z);
   |                       ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_any` intrinsic: unsupported simd_reduce_any from `f32x4` with element `f32` to `bool`
  --> $DIR/simd-intrinsic-generic-reduction.rs:67:23
   |
LL |         let _: bool = simd_reduce_any(z);
   |                       ^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_add_ordered` intrinsic: accumulator of simd_reduce_add_ordered is not a constant
  --> $DIR/simd-intrinsic-generic-reduction.rs:77:5
   |
LL |     simd_reduce_add_ordered(z, x);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_reduce_mul_ordered` intrinsic: accumulator of simd_reduce_mul_ordered is not a constant
  --> $DIR/simd-intrinsic-generic-reduction.rs:79:5
   |
LL |     simd_reduce_mul_ordered(z, x);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0511`.
